<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">MyCoffee</string>

    <string name="name">Name</string>

    <string name="toppings">Toppings</string>

    <string name="whipped_cream">Whipped Cream</string>

    <string name="chocolate">Chocolate</string>

    <string name="quantity">Quantity</string>

    <string name="plus">+</string>

    <string name="minus">-</string>

    <string name="initial_quantity_value">1</string>

    <string name="order">Order</string>

    <string name="email">You have no email app installed. MyCoffee cannot proceed with the order :(</string>

    <string name="increment">Don\'t you think 100 coffees is pretty much? :P</string>

    <string name="decrement">You should have at least one of our coffees ;)</string>


    <string name="order_subject">Coffee for <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="order_title">Coffee order</string>

    <string name="order_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="order_cream_chocolate">Whipped cream and chocolate added.</string>

    <string name="order_cream">Whipped cream added.</string>

    <string name="order_chocolate">Chocolate added.</string>

    <string name="order_quantity">Quantity of coffees: <xliff:g id="quantity" example="3">%d</xliff:g></string>

    <string name="order_price">Total: $<xliff:g id="price" example="25">%d</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="order_thanks">Thank you! ;D</string>

</resources>